stajyer tablosu ve stajyer şemasının oluşturulması